[package]
name = "parachute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.21.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"
futures = "0.3.30"
itertools = "0.12.1"
ascii_table = "4.0.3"
memoize = "0.4.2"
ustr = "1.0.0"
log-derive = "0.4.1"
log = "0.4.22"
charming = { version = "0.3.1", features = ["ssr"] }

[profile.release]
debug = true
